<resources>
    <string name="app_name">ScoreBoard2</string>
    <string name="team_a">TEAM A</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="team_b">TEAM B</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="reset">RESET</string>
    <string name="_0">0</string>
    <string name="_0">0</string>
</resources>